-Completed FizzBuzz JS Exercise -Edited flex7 emojis work now

--- a/foundations/flex/07-flex-layout-2/index.html
+++ b/foundations/flex/07-flex-layout-2/index.html
@@ -14,10 +14,10 @@
     <div class="body">
       <div class="sidebar">
         <ul>
-          <li><a href="#">😃 - Link One</a></li> 
-          <li><a href="#">😃 - Link Two</a></li>
-          <li><a href="#">😃 - Link Three</a></li>
-          <li><a href="#">😃 - Link Four</a></li>
+          <li><a href="#">1️⃣ - Link One</a></li> 
+          <li><a href="#">2️⃣ - Link Two</a></li>
+          <li><a href="#">3️⃣ - Link Three</a></li>
+          <li><a href="#">4️⃣ - Link Four</a></li>
         </ul>
       </div>
       <div class="cards">
